k8s/client_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
         component: web
    spec:
      containers:
        - name: client
          image: halad/multiclient
          ports:
             - containerPort: 3000
