k8s/server_deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
         component: web
    spec:
      containers:
        - name: server
          image: halad/multiserver
          ports:
            - containerPort: 5000
