k8s/postgres_cluster_ip_service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    component: web
  ports:
  - port: 5432
    targetPort: 5432
